--- a/about.html
+++ b/about.html
@@ -1,120 +1,158 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-	<head>
-		<title>About me</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<link rel="icon" href="images/Favicon.png" type="image/png" sizes="16x16">
-	</head>
-	<body>
+<head>
+  <title>About me</title>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1" name="viewport">
+  <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+  <link href="assets/css/main.css" rel="stylesheet">
+  <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+  <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+  <link href="images/Favicon.png" rel="icon" sizes="16x16" type="image/png">
+</head>
+<body>
+  <!-- Page Wrapper -->
+  <div id="page-wrapper">
+    <!-- Header -->
+    <header id="header">
+      <h1 id="logo"><a href="index.html">STEPH DEL RIO</a></h1>
+      <nav id="nav">
+        <ul>
+          <li class="special">
+            <a class="menuToggle" href="#menu"></a>
+            <div id="menu">
+              <ul>
+                <li>
+                  <a href="index.html">Home</a>
+                </li>
+                <li>
+                  <a href="about.html">About</a>
+                </li>
+                <li>
+                  <a href="index.html#two">Work</a>
+                </li>
+                <li>
+                  <a href="index.html#stephsketch">Contact</a>
+                </li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </nav>
+    </header><!-- Main -->
+    <article id="main2">
+      <header>
+        <h2>UX STRATEGIST &amp; DESIGNER</h2>
+        <div id="main2-typetext-2">
+          I'm a
+          <p id="element2"></p>
+          <div class="typed-cursor"></div>
+        </div>
+        <style type="text/css">
+        	#element2 {
+        		border-bottom: 1px solid white;
+        		padding-bottom: 3px;
+        		display: initial;
+        		font-family: "Avenir Next" !important;
+        	}
+        	#main2 header p {
+        		letter-spacing: 0;
+        		color: white;
+        		font-family: "Avenir Next" !important;
+        	}
+        </style><a class="more scrolly" href="#one"></a>
+      </header>
+      <section class="wrapper style5" id="one">
+        <div class="inner">
+          <br>
+          <br>
+          <br>
+          <h4>Hi, I'm Steph!<span class="image right"><img alt="" src=
+          "images/CircleHello.png"></span></h4>
+          <p>As a UX Designer, I'm a firm believer that UX is not about
+          technology; it's about people. In my design process, I constantly aim
+          to advocate on the user's behalf and find the solution that will meet
+          both user needs and business goals.</p>
+          <p>Prior to UX, I worked for Coach corporate in various capacities
+          including visual merchandising, communications, logistics and
+          production. Each of these roles involved teamwork, project
+          management, cross-functional partnership, budget constraints, and a
+          focus on customer experience all of which are applicable to my
+          current UX process.</p>
+          <p>I also thrive at applying my research skills gained from my
+          Political Science degree to my current user research process in
+          investigating and discovering user needs, analyzing competitors and
+          uncovering market opportunities.</p>
+          <p>I believe in creative collaboration, and strive under pressure. I
+          love challenges, and I appreciate feedback. I consider myself an
+          “entrepreneur in training” and strive to meet business goals as I
+          design user experiences.</p>
+          <div class="inner">
+            <header>
+              <ul class="actions">
+                <li>
+                  <a class="button small fit special" href=
+                  "mailto:stephdelrio.design@gmail.com?subject=Hi%20there!">Say
+                  Hello</a>
+                </li>
+              </ul>
+            </header>
+          </div>
+        </div>
+      </section>
+    </article><!-- Footer -->
+    <footer id="footer">
+      <p>stephdelrio.design@gmail.com</p>
+      <ul class="icons">
+        <li>
+          <a class="icon fa-envelope-o" href=
+          "mailto:stephdelrio.design@gmail.com?subject=Hello!"><span class=
+          "label">Email</span></a>
+        </li>
+        <li>
+          <a class="icon fa-linkedin" href=
+          "https://www.linkedin.com/in/stephanie-del-rio-ab850245" target=
+          "_blank"><span class="label">LinkedIn</span></a>
+        </li>
+        <li>
+          <a class="icon fa-twitter" href="https://twitter.com/Stephdelrio"
+          target="_blank"><span class="label">Twitter</span></a>
+        </li>
+      </ul>
+      <ul class="copyright">
+        <li>&copy; SDR</li>
+        <li>
+          <a href="http://iamwill.us" target="_blank">WPY</a>
+        </li>
+      </ul>
+    </footer>
+  </div><!-- Scripts -->
+  <script src="assets/js/jquery.min.js">
+  </script>
+  <script src="assets/js/jquery.scrollex.min.js">
+  </script>
+  <script src="assets/js/jquery.scrolly.min.js">
+  </script>
+  <script src="assets/js/skel.min.js">
+  </script>
+  <script src="assets/js/util.min.js">
+  </script>
+  <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 
-		<!-- Page Wrapper -->
-			<div id="page-wrapper">
+  <script src="assets/js/main.js">
+  </script>
+  <script src="assets/js/typed.min.js">
+  </script>
+  <script src="assets/js/jquery.stellar.min.js">
+  </script>
+  <script>
+  	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  	  ga('create', 'UA-80012310-1', 'auto');
+  	  ga('send', 'pageview');
 
-				<!-- Header -->
-					<header id="header">
-						<h1 id="logo"><a href="index.html">STEPH DEL RIO</a></h1>
-						<nav id="nav">
-							<ul>
-								<li class="special">
-									<a href="#menu" class="menuToggle"></a>
-									<div id="menu">
-										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="about.html">About</a></li>
-											<li><a href="index.html#two">Work</a></li>
-											<li><a href="index.html#stephsketch">Contact</a></li>
-										</ul>
-									</div>
-								</li>
-							</ul>
-						</nav>
-					</header>
-
-				<!-- Main -->
-					<article id="main2">
-						<header>
-							<h2>UX STRATEGIST &amp; DESIGNER</h2>
-							<div id="main2-typetext-2">I'm a <p id="element2"></p>
-							<div class="typed-cursor"></div>
-							</div>
-							<style type="text/css">
-								#element2 {
-									border-bottom: 1px solid white;
-									padding-bottom: 3px;
-									display: initial;
-									font-family: "Avenir Next" !important;
-								}
-								#main2 header p {
-									letter-spacing: 0; 
-									color: white;
-									font-family: "Avenir Next" !important;
-								}
-							</style>
-							<a href="#one" class="more scrolly"></a>
-						</header>
-
-						<section class="wrapper style5" id="one">
-							<div class="inner">
-							<br><br><br>
-								<h4>Hi, I'm Steph!<span class="image right"><img src="images/CircleHello.png" alt="" /></span></h4>
-								<p>As a UX Designer, I'm a firm believer that UX is not about technology; it's about people. In my design process, I constantly aim to advocate on the user's behalf and find the solution that will meet both user needs and business goals.</p>
-
-								<p>Prior to UX, I worked for Coach corporate in various capacities including visual merchandising, communications, logistics and production. Each of these roles involved teamwork, project management, cross-functional partnership, budget constraints, and a focus on customer experience all of which are applicable to my current UX process.</p>
-
-								<p>I also thrive at applying my research skills gained from my Political Science degree to my current user research process in investigating and discovering user needs, analyzing competitors and uncovering market opportunities.</p>
-
-								<p>I believe in creative collaboration, and strive under pressure. I love challenges, and I appreciate feedback. I consider myself an “entrepreneur in training” and strive to meet business goals as I design user experiences.</p>
-								<div class="inner">
-									<header>
-										<ul class="actions">
-											<li><a href="mailto:stephdelrio.design@gmail.com?subject=Hi there!" class="button small fit special">Say Hello</a></li>
-										</ul>
-									</header>
-								</div>	
-							</div>
-						</section>
-					</article>
-
-				<!-- Footer -->
-				<footer id="footer">
-					<p>stephdelrio.design@gmail.com</p>
-					<ul class="icons">
-						<li><a href="mailto:stephdelrio.design@gmail.com?subject=Hello!" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-						<li><a href="https://www.linkedin.com/in/stephanie-del-rio-ab850245" target="_blank" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="https://twitter.com/Stephdelrio" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-
-					</ul>
-					<ul class="copyright">
-						<li>&copy; SDR</li><li><a href="http://iamwill.us" target="_blank">WPY</a></li>
-					</ul>
-				</footer>
-				</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
-			<script src="assets/js/typed.js"></script>
-			<script src="assets/js/jquery.stellar.min.js"></script> 
-
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-80012310-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
-	</body>
+  </script>
+</body>
 </html>
