--- a/index.html
+++ b/index.html
@@ -1,177 +1,211 @@
-<!DOCTYPE HTML>
-
+<!DOCTYPE html>
 <html>
 <head>
-	<title>Steph Del Rio</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="description" content="User Experience Portfolio">
-	<meta name="keywords" content="ux, user experience, user research, UI, designer, coach, fashion, tech, women in tech, programming, user interface, general assembly, New York, NYC">
-	<meta name="author" content="Stephanie Del Rio">
-	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-	<link rel="stylesheet" href="assets/css/main.css" />
-	<link rel="stylesheet" href="assets/css/animate.css">
-	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-	<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-	<link rel="icon" href="images/Favicon.png" type="image/png" sizes="16x16">
+  <title>Steph Del Rio</title>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1" name="viewport">
+  <meta content="User Experience Portfolio" name="description">
+  <meta content="ux, user experience, user research, UI, designer, coach, fashion, tech, women in tech, programming, user interface, general assembly, New York, NYC" name="keywords">
+  <meta content="Stephanie Del Rio" name="author">
+  <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+  <link href="assets/css/main.css" rel="stylesheet">
+  <link href="assets/css/animate.css" rel="stylesheet">
+  <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+  <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+  <link href="images/Favicon.png" rel="icon" sizes="16x16" type="image/png">
 </head>
 <body class="landing">
+  <!-- Page Wrapper -->
+  <div id="page-wrapper">
+    <!-- Header -->
+    <header class="alt" id="header">
+      <h1 id="logo"><a href="index.html">STEPH DEL RIO</a></h1>
+      <nav id="nav">
+        <ul>
+          <li class="special">
+            <a class="menuToggle" href="#menu"></a>
+            <div id="menu">
+              <ul>
+                <li>
+                  <a href="index.html">Home</a>
+                </li>
+                <li>
+                  <a href="about.html">About</a>
+                </li><!-- <li><a href="elements.html">Process</a></li> -->
+                <li>
+                  <a href="#two">Work</a>
+                </li>
+                <li>
+                  <a href="#stephsketch">Contact</a>
+                </li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </nav>
+    </header><!-- Banner Landing Page -->
+    <section id="banner">
+      <div class="inner">
+        <h2>STEPH DEL RIO</h2><!-- <p class="iam">UX Designer</p> -->
+        <div id="banner-typetext">
+          I'm a UX
+          <p id="element"></p>
+          <div class="typed-cursor"></div>
+        </div>
+        <style type="text/css">
+            #element {
+                border-bottom: 1px solid white;
+                padding-bottom: 3px;
+                display: initial;
+            }
+        </style>
+      </div><a class="more scrolly" href="#one"></a>
+    </section><a class="scrollToTop" href="#"></a> <!-- About me quick -->
+    <section class="wrapper style1 special" id="one">
+      <!-- <div class="inner"> -->
+      <header class="major">
+        <h2 class="wow fadeInUp" data-wow-delay="0">UX is where empathy for
+        people meets tech.<br>
+        That's what I love about it.</h2>
+        <p class="wow fadeInUp" data-wow-delay="0.1s" style="font-size:18px">As
+        a UX Designer, my focus is on the user and how they interact with
+        products they love.<br>
+        If what I create can add a smile or make someone's life better, then
+        I've done my job. <a href="about.html">Read More</a></p>
+      </header>
+    </section><!-- Work Section -->
+    <section class="wrapper alt style2" id="two">
+      <section class="spotlight">
+        <div class="image wow fadeInLeft" data-wow-delay="0"><img alt=""
+        src="images/shopstyle.jpg"></div>
+        <div class="content wow fadeInRight" data-wow-delay="0">
+          <h2><b class="case-study-title">SNAPSTYLE</b></h2>
+          <h4>Search, discover, and buy anything you can photograph.</h4>
+          <p>My Role: Lead researcher, strategist, designer, usability
+          tester</p>
+          <ul class="actions wow fadeInUp" data-wow-delay="0">
+            <li>
+              <a class="button small fit" href="snapstyle.html">Full Case
+              Study</a>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="spotlight">
+        <div class="image wow fadeInRight" data-wow-delay="0"><img alt=""
+        src="images/curate.jpg"></div>
+        <div class="content2 wow fadeInLeft" data-wow-delay="0">
+          <h2><b class="case-study-title">CURATE</b></h2>
+          <h4>Men's custom outfit builder.</h4>
+          <p>My Role: Research, client relations, usability testing</p>
+          <p>CASE STUDY COMING SOON</p>
+        </div>
+      </section>
+      <section class="spotlight">
+        <div class="image wow fadeInLeft" data-wow-delay="0"><img alt=""
+        src="images/Airplane2.jpg"></div>
+        <div class="content wow fadeInRight" data-wow-delay="0">
+          <h2><b class="case-study-title">YELP TRAVEL</b></h2>
+          <h4>A new way to plan your trips.</h4>
+          <p>My Role: Lead researcher, strategist, designer, usability
+          tester</p>
+          <p>CASE STUDY COMING SOON</p>
+        </div>
+      </section>
+      <section class="spotlight">
+        <div class="image wow fadeInRight" data-wow-delay="0"><img alt=""
+        src="images/fashion-weather.jpg"></div>
+        <div class="content2 wow fadeInLeft" data-wow-delay="0">
+          <h2><b class="case-study-title">RAINING STYLE</b></h2>
+          <h4>Personal Project.</h4>
+          <p>My Role: All of the above</p>
+          <p>CASE STUDY COMING SOON</p>
+        </div>
+      </section>
+      <section class="spotlight">
+        <div class="image wow fadeInLeft" data-wow-delay="0"><img alt=""
+        src="images/columbia.jpg"></div>
+        <div class="content wow fadeInRight" data-wow-delay="0">
+          <h2><b class="case-study-title">COLUMBIA UNIVERSITY</b></h2>
+          <h4>An information architecture analysis.</h4>
+          <p>My Role: Research, analysis, strategy, information
+          architecture</p>
+          <p>CASE STUDY COMING SOON</p>
+        </div>
+      </section>
+    </section><!-- CTA -->
+    <section id="stephsketch">
+      <div class="inner wow fadeInUp" data-wow-delay="0">
+        <header>
+          <h2 style="color:white; font-size:2.25em;">Let's work together!</h2>
+          <ul class="actions">
+            <li>
+              <a class="button small fit special" href=
+              "mailto:stephdelrio.design@gmail.com?subject=Hi%20there!">Say
+              Hello</a>
+            </li>
+          </ul>
+        </header>
+      </div>
+    </section><!-- Footer -->
+    <footer id="footer">
+      <p>stephdelrio.design@gmail.com</p>
+      <ul class="icons">
+        <li>
+          <a class="icon fa-envelope-o" href=
+          "mailto:stephdelrio.design@gmail.com?subject=Hello!"><span class=
+          "label">Email</span></a>
+        </li>
+        <li>
+          <a class="icon fa-linkedin" href=
+          "https://www.linkedin.com/in/stephanie-del-rio-ab850245" target=
+          "_blank"><span class="label">LinkedIn</span></a>
+        </li>
+        <li>
+          <a class="icon fa-twitter" href="https://twitter.com/Stephdelrio"
+          target="_blank"><span class="label">Twitter</span></a>
+        </li>
+      </ul>
+      <ul class="copyright">
+        <li>&copy; SDR</li>
+        <li>
+          <a href="http://iamwill.us" target="_blank">WPY</a>
+        </li>
+      </ul>
+    </footer>
+  </div>
 
-	<!-- Page Wrapper -->
-	<div id="page-wrapper">
+  <!-- Scripts -->
+  <script src="assets/js/jquery.min.js">
+  </script>
+  <script src="assets/js/jquery.scrollex.min.js">
+  </script>
+  <script src="assets/js/jquery.scrolly.min.js">
+  </script>
+  <script src="assets/js/skel.min.js">
+  </script>
+  <script src="assets/js/util.min.js">
+  </script>
+  <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 
-		<!-- Header -->
-		<header id="header" class="alt">
-			<h1 id="logo"><a href="index.html">STEPH DEL RIO</a></h1>
-			<nav id="nav">
-				<ul>
-					<li class="special">
-						<a href="#menu" class="menuToggle"></a>
-						<div id="menu">
-							<ul>
-								<li><a href="index.html">Home</a></li>
-								<li><a href="about.html">About</a></li>
-								<!-- <li><a href="elements.html">Process</a></li> -->
-								<li><a href="#two">Work</a></li>
-								<li><a href="#stephsketch">Contact</a></li>
-							</ul>
-						</div>
-					</li>
-				</ul>
-			</nav>
-		</header>
-
-		<!-- Banner Landing Page -->
-		<section id="banner">
-			<div class="inner">
-				<h2>STEPH DEL RIO</h2>
-				<!-- <p class="iam">UX Designer</p> -->
-				<div id="banner-typetext">I'm a UX <p id="element"></p>
-					<div class="typed-cursor"></div>
-				</div>
-				<style type="text/css">
-					#element {
-						border-bottom: 1px solid white;
-						padding-bottom: 3px;
-						display: initial;
-					}
-				</style>
-			</div>
-			<a href="#one" class="more scrolly"></a>
-		</section>
-		<a href="#" class="scrollToTop"></a>
-		<!-- About me quick -->
-		<section class="wrapper style1 special" id="one">
-			<!-- <div class="inner"> -->
-			<header class="major">
-				<h2 class="wow fadeInUp" data-wow-delay="0.2s">UX is where empathy for people meets tech.<br>That's what I love about it.</h2>
-				<p class="wow fadeInUp" data-wow-delay="0.4s"style="font-size:18px">As a UX Designer, my focus is on the user and how they interact with products they love.<br />
-					If what I create can add a smile or make someone's life better, then I've done my job. <a href="about.html">Read More</a></p>
-				</header>
-			</section>
-
-
-			<!-- Work Section -->
-
-			<section id="two" class="wrapper alt style2">
-				<section class="spotlight">
-					<div class="image wow fadeInLeft" data-wow-delay="0.4s"><img src="images/snapstyle/shopstyle.jpg" alt="" /></div>
-					<div class="content wow fadeInRight" data-wow-delay="0.4s">
-						<h2><b class="case-study-title">SNAPSTYLE</b></h2>
-						<h4>Search, discover, and buy anything you can photograph.</h4>
-						<p>My Role: Lead researcher, strategist, designer, usability tester</p>
-						<ul class="actions wow fadeInUp" data-wow-delay="0.2s">
-							<li><a href="snapstyle.html" class="button small fit">Full Case Study</a></li>
-						</ul>
-					</div>
-				</section>
-			<section class="spotlight">
-				<div class="image wow fadeInRight" data-wow-delay="0.4s"><img src="images/snapstyle/curate.jpg" alt="" /></div><div class="content2 wow fadeInLeft" data-wow-delay="0.4s">
-				<h2><b class="case-study-title">CURATE</b></h2>
-				<h4>Men's custom outfit builder.</h4>
-				<p>My Role: Research, client relations, usability testing</p>
-				<p>CASE STUDY COMING SOON</p>
-			</div>
-		</section>
-		<section class="spotlight">
-			<div class="image wow fadeInLeft" data-wow-delay="0.4s"><img src="images/snapstyle/Airplane2.jpg" alt="" /></div><div class="content wow fadeInRight" data-wow-delay="0.4s">
-			<h2><b class="case-study-title">YELP TRAVEL</b></h2>
-			<h4>A new way to plan your trips.</h4>
-			<p>My Role: Lead researcher, strategist, designer, usability tester</p>
-			<p>CASE STUDY COMING SOON</p>
-		</div>
-	</section>
-	<section class="spotlight">
-		<div class="image wow fadeInRight" data-wow-delay="0.4s"><img src="images/fashion-weather.jpg" alt="" /></div><div class="content2 wow fadeInLeft" data-wow-delay="0.4s">
-		<h2><b class="case-study-title">RAINING STYLE</b></h2>
-		<h4>Personal Project.</h4>
-		<p>My Role: All of the above</p>
-		<p>CASE STUDY COMING SOON</p>
-	</div>
-</section>
-<section class="spotlight">
-	<div class="image wow fadeInLeft" data-wow-delay="0.4s"><img src="images/columbia.jpg" alt="" /></div><div class="content wow fadeInRight" data-wow-delay="0.4s">
-	<h2><b class="case-study-title">COLUMBIA UNIVERSITY</b></h2>
-	<h4>An information architecture analysis.</h4>
-	<p>My Role: Research, analysis, strategy, information architecture</p>
-	<p>CASE STUDY COMING SOON</p>
-</div>
-</section>
-</section>
-
-
-<!-- CTA -->
-<section id="stephsketch">
-	<div class="inner wow fadeInUp" data-wow-delay="0.2s">
-		<header>
-			<h2 style="color:white; font-size:2.25em;">Let's work together!</h2>
-			<ul class="actions">
-				<li><a href="mailto:stephdelrio.design@gmail.com?subject=Hi there!" class="button small fit special">Say Hello</a></li>
-			</ul>
-		</header>
-	</div>
-</section>
-
-<!-- Footer -->
-<footer id="footer">
-	<p>stephdelrio.design@gmail.com</p>
-	<ul class="icons">
-		<li><a href="mailto:stephdelrio.design@gmail.com?subject=Hello!" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-		<li><a href="https://www.linkedin.com/in/stephanie-del-rio-ab850245" target="_blank" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-		<li><a href="https://twitter.com/Stephdelrio" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-
-	</ul>
-	<ul class="copyright">
-		<li>&copy; SDR</li><li><a href="http://iamwill.us" target="_blank">WPY</a></li>
-	</ul>
-</footer>
-</div>
-
-<!-- Scripts -->
-<script src="assets/js/jquery.min.js"></script>
-<script src="assets/js/jquery.scrollex.min.js"></script>
-<script src="assets/js/jquery.scrolly.min.js"></script>
-<script src="assets/js/skel.min.js"></script>
-<script src="assets/js/util.js"></script>
-<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-<script src="assets/js/main.js"></script>
-<script src="assets/js/typed.js"></script>
-<script src="assets/js/jquery.stellar.min.js"></script> 
-<script src="assets/js/wow.min.js"></script>
-<script>
-	new WOW().init();
-</script> 
-					
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-80012310-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
-
-	</body>
+  <script src="assets/js/main.js">
+  </script>
+  <script src="assets/js/typed.min.js">
+  </script>
+  <script src="assets/js/jquery.stellar.min.js">
+  </script>
+  <script src="assets/js/wow.min.js">
+  </script>
+  <script>
+       new WOW().init();
+  </script>
+  <script>
+       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+       ga('create', 'UA-80012310-1', 'auto');
+       ga('send', 'pageview');
+  </script>
+</body>
 </html>
