--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta content="ux, user experience, user research, UI, designer, coach, fashion, tech, women in tech, programming, user interface, general assembly, New York, NYC" name="keywords">
   <meta content="Stephanie Del Rio" name="author">
   <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-  <link href="assets/css/main.css" rel="stylesheet">
-  <link href="assets/css/animate.css" rel="stylesheet">
+  <link href="assets/css/main.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
   <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
   <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
   <link href="images/Favicon.png" rel="icon" sizes="16x16" type="image/png">
@@ -176,25 +176,25 @@
   </div>
 
   <!-- Scripts -->
-  <script src="assets/js/jquery.min.js">
+  <script src="assets/js/jquery.min.js" async>
   </script>
-  <script src="assets/js/jquery.scrollex.min.js">
+  <script src="assets/js/jquery.scrollex.min.js" async>
   </script>
-  <script src="assets/js/jquery.scrolly.min.js">
+  <script src="assets/js/jquery.scrolly.min.js" async>
   </script>
-  <script src="assets/js/skel.min.js">
+  <script src="assets/js/skel.min.js" async>
   </script>
-  <script src="assets/js/util.min.js">
+  <script src="assets/js/util.min.js" async>
   </script>
   <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 
-  <script src="assets/js/main.js">
+  <script src="assets/js/main.js" async>
   </script>
-  <script src="assets/js/typed.min.js">
+  <script src="assets/js/typed.min.js" async>
   </script>
-  <script src="assets/js/jquery.stellar.min.js">
+  <script src="assets/js/jquery.stellar.min.js" async>
   </script>
-  <script src="assets/js/wow.min.js">
+  <script src="assets/js/wow.min.js" async>
   </script>
   <script>
        new WOW().init();
