--- a/snapstyle.html
+++ b/snapstyle.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-  <link href="assets/css/main.css" rel="stylesheet">
+  <link href="assets/css/main.min.css" rel="stylesheet">
   <link href="assets/css/lightbox.css" rel="stylesheet">
   <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
   <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
@@ -478,23 +478,23 @@
       </footer>
     </article>
   </div><!-- Scripts -->
-  <script src="assets/js/jquery.min.js">
+  <script src="assets/js/jquery.min.js" async>
   </script>
-  <script src="assets/js/jquery.scrollex.min.js">
+  <script src="assets/js/jquery.scrollex.min.js" async>
   </script>
-  <script src="assets/js/jquery.scrolly.min.js">
+  <script src="assets/js/jquery.scrolly.min.js" async>
   </script>
-  <script src="assets/js/skel.min.js">
+  <script src="assets/js/skel.min.js" async>
   </script>
-  <script src="assets/js/util.min.js">
+  <script src="assets/js/util.min.js" async>
   </script>
   <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 
-  <script src="assets/js/main.js">
+  <script src="assets/js/main.min.js" async>
   </script>
-  <script src="assets/js/lightbox-plus-jquery.js">
+  <script src="assets/js/lightbox-plus-jquery.js" async>
   </script>
-  <script src="assets/js/jquery.stellar.min.js">
+  <script src="assets/js/jquery.stellar.min.js" async>
   </script>
   <script>
     lightbox.option({
@@ -507,10 +507,8 @@
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
     ga('create', 'UA-80012310-1', 'auto');
     ga('send', 'pageview');
-
   </script>
 </body>
 </html>
