--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-  <link href="assets/css/main.css" rel="stylesheet">
+  <link href="assets/css/main.min.css" rel="stylesheet">
   <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
   <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
   <link href="images/Favicon.png" rel="icon" sizes="16x16" type="image/png">
@@ -127,23 +127,23 @@
       </ul>
     </footer>
   </div><!-- Scripts -->
-  <script src="assets/js/jquery.min.js">
+  <script src="assets/js/jquery.min.js" async>
   </script>
-  <script src="assets/js/jquery.scrollex.min.js">
+  <script src="assets/js/jquery.scrollex.min.js" async>
   </script>
-  <script src="assets/js/jquery.scrolly.min.js">
+  <script src="assets/js/jquery.scrolly.min.js" async>
   </script>
-  <script src="assets/js/skel.min.js">
+  <script src="assets/js/skel.min.js" async>
   </script>
-  <script src="assets/js/util.min.js">
+  <script src="assets/js/util.min.js" async>
   </script>
   <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 
-  <script src="assets/js/main.js">
+  <script src="assets/js/main.min.js" async>
   </script>
-  <script src="assets/js/typed.min.js">
+  <script src="assets/js/typed.min.js" async>
   </script>
-  <script src="assets/js/jquery.stellar.min.js">
+  <script src="assets/js/jquery.stellar.min.js" async>
   </script>
   <script>
   	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
