--- a/index.html
+++ b/index.html
@@ -176,11 +176,11 @@
   </div>
 
   <!-- Scripts -->
-  <script src="assets/js/jquery.min.js" async>
+  <script src="assets/js/jquery.min.js">
   </script>
-  <script src="assets/js/jquery.scrollex.min.js" async>
+  <script src="assets/js/jquery.scrollex.min.js">
   </script>
-  <script src="assets/js/jquery.scrolly.min.js" async>
+  <script src="assets/js/jquery.scrolly.min.js">
   </script>
   <script src="assets/js/skel.min.js" async>
   </script>
@@ -190,11 +190,11 @@
 
   <script src="assets/js/main.js" async>
   </script>
-  <script src="assets/js/typed.min.js" async>
+  <script src="assets/js/typed.min.js">
   </script>
   <script src="assets/js/jquery.stellar.min.js" async>
   </script>
-  <script src="assets/js/wow.min.js" async>
+  <script src="assets/js/wow.min.js">
   </script>
   <script>
        new WOW().init();
