--- a/about.html
+++ b/about.html
@@ -127,23 +127,21 @@
       </ul>
     </footer>
   </div><!-- Scripts -->
-  <script src="assets/js/jquery.min.js" async>
+  <script src="assets/js/jquery.min.js">
   </script>
-  <script src="assets/js/jquery.scrollex.min.js" async>
+  <script src="assets/js/jquery.scrollex.min.js">
   </script>
-  <script src="assets/js/jquery.scrolly.min.js" async>
+  <script src="assets/js/jquery.scrolly.min.js">
   </script>
-  <script src="assets/js/skel.min.js" async>
+  <script src="assets/js/skel.min.js">
   </script>
-  <script src="assets/js/util.min.js" async>
+  <script src="assets/js/util.min.js">
   </script>
   <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 
-  <script src="assets/js/main.min.js" async>
+  <script src="assets/js/main.min.js">
   </script>
-  <script src="assets/js/typed.min.js" async>
-  </script>
-  <script src="assets/js/jquery.stellar.min.js" async>
+  <script src="assets/js/typed.min.js">
   </script>
   <script>
   	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
