--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <meta content="ux, user experience, user research, UI, designer, coach, fashion, tech, women in tech, programming, user interface, general assembly, New York, NYC" name="keywords">
   <meta content="Stephanie Del Rio" name="author">
   <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-  <link href="assets/css/main.min.css" rel="stylesheet">
+  <link href="assets/css/main.css" rel="stylesheet">
+  <link href="assets/css/font-awesome.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
   <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
   <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
@@ -64,10 +65,10 @@
     <section class="wrapper style1 special" id="one">
       <!-- <div class="inner"> -->
       <header class="major">
-        <h2 class="wow fadeInUp" data-wow-delay="0">UX is where empathy for
+        <h2 class="wow fadeIn" data-wow-delay="0">UX is where empathy for
         people meets tech.<br>
         That's what I love about it.</h2>
-        <p class="wow fadeInUp" data-wow-delay="0.1s" style="font-size:18px">As
+        <p class="wow fadeIn" data-wow-delay="0.1s" style="font-size:18px">As
         a UX Designer, my focus is on the user and how they interact with
         products they love.<br>
         If what I create can add a smile or make someone's life better, then
@@ -76,14 +77,14 @@
     </section><!-- Work Section -->
     <section class="wrapper alt style2" id="two">
       <section class="spotlight">
-        <div class="image wow fadeInLeft" data-wow-delay="0"><img alt=""
+        <div class="image wow fadeIn" data-wow-delay="0"><img alt=""
         src="images/shopstyle.jpg"></div>
-        <div class="content wow fadeInRight" data-wow-delay="0">
+        <div class="content wow fadeIn" data-wow-delay="0">
           <h2><b class="case-study-title">SNAPSTYLE</b></h2>
           <h4>Search, discover, and buy anything you can photograph.</h4>
           <p>My Role: Lead researcher, strategist, designer, usability
           tester</p>
-          <ul class="actions wow fadeInUp" data-wow-delay="0">
+          <ul class="actions wow fadeIn" data-wow-delay="0">
             <li>
               <a class="button small fit" href="snapstyle.html">Full Case
               Study</a>
@@ -92,9 +93,9 @@
         </div>
       </section>
       <section class="spotlight">
-        <div class="image wow fadeInRight" data-wow-delay="0"><img alt=""
+        <div class="image wow fadeIn" data-wow-delay="0"><img alt=""
         src="images/curate.jpg"></div>
-        <div class="content2 wow fadeInLeft" data-wow-delay="0">
+        <div class="content2 wow fadeIn" data-wow-delay="0">
           <h2><b class="case-study-title">CURATE</b></h2>
           <h4>Men's custom outfit builder.</h4>
           <p>My Role: Research, client relations, usability testing</p>
@@ -102,9 +103,9 @@
         </div>
       </section>
       <section class="spotlight">
-        <div class="image wow fadeInLeft" data-wow-delay="0"><img alt=""
+        <div class="image wow fadeIn" data-wow-delay="0"><img alt=""
         src="images/Airplane2.jpg"></div>
-        <div class="content wow fadeInRight" data-wow-delay="0">
+        <div class="content wow fadeIn" data-wow-delay="0">
           <h2><b class="case-study-title">YELP TRAVEL</b></h2>
           <h4>A new way to plan your trips.</h4>
           <p>My Role: Lead researcher, strategist, designer, usability
@@ -113,9 +114,9 @@
         </div>
       </section>
       <section class="spotlight">
-        <div class="image wow fadeInRight" data-wow-delay="0"><img alt=""
+        <div class="image wow fadeIn" data-wow-delay="0"><img alt=""
         src="images/fashion-weather.jpg"></div>
-        <div class="content2 wow fadeInLeft" data-wow-delay="0">
+        <div class="content2 wow fadeIn" data-wow-delay="0">
           <h2><b class="case-study-title">RAINING STYLE</b></h2>
           <h4>Personal Project.</h4>
           <p>My Role: All of the above</p>
@@ -123,9 +124,9 @@
         </div>
       </section>
       <section class="spotlight">
-        <div class="image wow fadeInLeft" data-wow-delay="0"><img alt=""
+        <div class="image wow fadeIn" data-wow-delay="0"><img alt=""
         src="images/columbia.jpg"></div>
-        <div class="content wow fadeInRight" data-wow-delay="0">
+        <div class="content wow fadeIn" data-wow-delay="0">
           <h2><b class="case-study-title">COLUMBIA UNIVERSITY</b></h2>
           <h4>An information architecture analysis.</h4>
           <p>My Role: Research, analysis, strategy, information
@@ -135,7 +136,7 @@
       </section>
     </section><!-- CTA -->
     <section id="stephsketch">
-      <div class="inner wow fadeInUp" data-wow-delay="0">
+      <div class="inner wow fadeIn" data-wow-delay="0">
         <header>
           <h2 style="color:white; font-size:2.25em;">Let's work together!</h2>
           <ul class="actions">
@@ -176,25 +177,25 @@
   </div>
 
   <!-- Scripts -->
-  <script src="assets/js/jquery.min.js" async>
+  <script src="assets/js/jquery.min.js">
   </script>
-  <script src="assets/js/jquery.scrollex.min.js" async>
+  <script src="assets/js/jquery.scrollex.min.js">
   </script>
-  <script src="assets/js/jquery.scrolly.min.js" async>
+  <script src="assets/js/jquery.scrolly.min.js">
   </script>
-  <script src="assets/js/skel.min.js" async>
+  <script src="assets/js/skel.min.js">
   </script>
-  <script src="assets/js/util.min.js" async>
+  <script src="assets/js/util.min.js">
   </script>
   <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 
-  <script src="assets/js/main.js" async>
+  <script src="assets/js/main.js">
   </script>
-  <script src="assets/js/typed.min.js" async>
+  <script src="assets/js/typed.min.js">
   </script>
-  <script src="assets/js/jquery.stellar.min.js" async>
+  <script src="assets/js/jquery.stellar.min.js">
   </script>
-  <script src="assets/js/wow.min.js" async>
+  <script src="assets/js/wow.min.js">
   </script>
   <script>
        new WOW().init();
