--- a/snapstyle.html
+++ b/snapstyle.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-  <link href="assets/css/main.min.css" rel="stylesheet">
+  <link href="assets/css/main.css" rel="stylesheet">
+  <link href="assets/css/font-awesome.min.css" rel="stylesheet">
   <link href="assets/css/lightbox.css" rel="stylesheet">
   <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
   <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
@@ -478,31 +479,31 @@
       </footer>
     </article>
   </div><!-- Scripts -->
-  <script src="assets/js/jquery.min.js" async>
+  <script src="assets/js/jquery.min.js">
   </script>
-  <script src="assets/js/jquery.scrollex.min.js" async>
+  <script src="assets/js/jquery.scrollex.min.js">
   </script>
-  <script src="assets/js/jquery.scrolly.min.js" async>
+  <script src="assets/js/jquery.scrolly.min.js">
   </script>
-  <script src="assets/js/skel.min.js" async>
+  <script src="assets/js/skel.min.js">
   </script>
-  <script src="assets/js/util.min.js" async>
+  <script src="assets/js/util.min.js">
   </script>
   <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 
-  <script src="assets/js/main.min.js" async>
+  <script src="assets/js/main.js">
   </script>
-  <script src="assets/js/lightbox-plus-jquery.js" async>
+  <script src="assets/js/lightbox-plus-jquery.js">
   </script>
-  <script src="assets/js/jquery.stellar.min.js" async>
-  </script>
+<!--   <script src="assets/js/jquery.stellar.min.js" async>
+  </script> -->
   <script>
     lightbox.option({
       'resizeDuration': 200,
       'fitImagesInViewport': true
     })
   </script>
-  <script>
+  <script async>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
