--- a/snapstyle.html
+++ b/snapstyle.html
@@ -478,7 +478,9 @@
         </ul>
       </footer>
     </article>
-  </div><!-- Scripts -->
+  </div>
+
+  <!-- Scripts -->
   <script src="assets/js/jquery.min.js">
   </script>
   <script src="assets/js/jquery.scrollex.min.js">
@@ -491,16 +493,8 @@
   </script>
   <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 
-  <script src="assets/js/main.js">
-  </script>
-  <script src="assets/js/lightbox-plus-jquery.js">
-  <script src="assets/js/main.min.js">
-  </script>
-  <script src="assets/js/lightbox-plus-jquery.js">
-  </script>
-  </script>
-<!--   <script src="assets/js/jquery.stellar.min.js" async>
-  </script> -->
+  <script src="assets/js/main.js"></script>
+  <script src="assets/js/lightbox-plus-jquery.js"></script>
   <script>
     lightbox.option({
       'resizeDuration': 200,
